metade do trabalho

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Austrália - Home</title>
 </head>
 <body>
     
+    <header>
+        <div>
+            <img src="" alt="">
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a class="active" href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="./pages/História.html">História</a>
+                </li>
+                <li>
+                    <a href="./pages/Cultura.html">Cultura</a>
+                </li>
+                <li>
+                    <a href="./pages/PontosTuristicos.html">Pontos Turísticos</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div class="primeira">
+        <h1>Austrália</h1>
+    <p>A Austrália é um país e continente no hemisfério sul, famoso por sua biodiversidade, cidades icônicas como Sydney
+        e Melbourne, e cultura diversificada. Com uma rica herança indígena e paisagens deslumbrantes, como a Grande
+        Barreira de Coral, a Austrália atrai turistas de todo o mundo.</p>
+    <a href="./pages/História.html">Continuar</a>
+    </div>
+    
 </body>
+
 </html>
