--- a/pages/Cultura.html
+++ b/pages/Cultura.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Cultura.css">
     <title>Austrália - Cultura</title>
 </head>
+
 <body>
-    <img src="../img/Cultura.jpeg" alt="">
     <header>
         <div>
             <img src="" alt="">
@@ -21,7 +22,7 @@
                     <a href="./História.html">História</a>
                 </li>
                 <li>
-                    <a class="active"  href="./Cultura.html">Cultura</a>
+                    <a class="active" href="./Cultura.html">Cultura</a>
                 </li>
                 <li>
                     <a href="./PontosTuristicos.html">Pontos Turísticos</a>
@@ -29,6 +30,48 @@
             </ul>
         </nav>
     </header>
-
+    <div class="all">
+        <h1>Cultura</h1>
+        <div class="primeira">
+            <h2>Cultura australiana</h2>
+            <p>A cultura australiana é uma rica mistura de tradições indígenas, influências britânicas e
+                multiculturalismo contemporâneo. Os aborígenes, como primeiros habitantes, trazem uma herança única com
+                arte, música e espiritualidade ligadas à terra. A colonização britânica moldou aspectos da língua,
+                política e costumes, enquanto as ondas de imigração diversificaram a culinária, festivais e estilos de
+                vida. A Austrália valoriza atividades ao ar livre, como esportes, praia e natureza, refletindo seu clima
+                e paisagens. A combinação de inovação, tradição e acolhimento define a identidade cultural australiana
+                moderna.
+            </p>
+            <img src="../img/C2" alt="">
+        </div>
+        <div class="segunda">
+            <h2>Aborígenes</h2>
+            <p>Os aborígenes australianos são os povos originários da Austrália, com uma história que remonta a mais de
+                65
+                mil anos, sendo uma das culturas mais antigas do mundo. Eles possuem uma conexão profunda com a terra,
+                expressa em suas práticas espirituais, canções e artes. Suas crenças giram em torno do Dreamtime (Tempo
+                do
+                Sonho), que narra a criação do mundo e define suas leis e tradições. Embora tenham enfrentado séculos de
+                colonização e marginalização, continuam a lutar pela preservação de sua cultura e por direitos sobre
+                suas
+                terras ancestrais. Sua rica herança é um marco na diversidade cultural global.
+            </p>
+            <img src="../img/C1" alt="">
+        </div>
+        <div class="terceira">
+            <h2>Inglês australiano</h2>
+            <p>O inglês australiano é uma variante do inglês que surgiu da colonização britânica no século XVIII,
+                evoluindo com influências de línguas indígenas e de imigrantes. Ele se destaca pelo sotaque
+                característico, expressões coloquiais (*slang*) e entonação única. É amplamente utilizado em todas as
+                esferas do país, sendo uma marca cultural distinta da Austrália.
+            </p>
+            <img src="../img/C3.webp" alt="">
+        </div>
+        <div class="buttom">
+            <a href="./História.html">Voltar</a>
+            <a href="./PontosTuristicos.html">Continuar</a>
+        </div>
+    </div>
 </body>
+
 </html>
