--- a/pages/PontosTuristicos.html
+++ b/pages/PontosTuristicos.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./PontosTuristicos.css">
     <title>Austrália - Pontos Turisticos</title>
 </head>
+
 <body>
     <header>
-        <div>
-            <img src="../img/PontosTuristicos.jpeg" alt="">
-        </div>
         <nav>
             <ul>
                 <li>
@@ -23,10 +22,45 @@
                     <a href="./Cultura.html">Cultura</a>
                 </li>
                 <li>
-                    <a class="active"  href="./PontosTuristicos.html">Pontos Turísticos</a>
+                    <a class="active" href="./PontosTuristicos.html">Pontos Turísticos</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <div class="all">
+        <h1>Pontos Turisticos</h1>
+        <div class="primeira">
+            <h2>Sydney Opera House</h2>
+            <p>A Sydney Opera House é um ícone arquitetônico e cultural da Austrália, localizada na cidade de Sydney.
+                Projetada por Jørn Utzon, é famosa por seu design único inspirado em velas ao vento e abriga
+                apresentações de música, teatro e dança. Reconhecida como Patrimônio Mundial pela UNESCO, simboliza a
+                criatividade e modernidade australianas.
+            </p>
+            <img src="../img/PT1.jpg" alt="">
+        </div>
+        <div class="segunda">
+            <h2>Grande Barreira de Coral</h2>
+            <p>A Grande Barreira de Coral, localizada na costa nordeste da Austrália, é o maior sistema de recifes de
+                coral do mundo. Patrimônio Mundial da UNESCO, abriga uma biodiversidade marinha impressionante, com
+                milhares de espécies de corais, peixes e outros organismos. É um dos maiores tesouros naturais do
+                planeta e símbolo de preservação ambiental.
+            </p>
+            <img src="../img/PT2" alt="">
+        </div>
+        <div class="terceira">
+            <h2>Outback australiano</h2>
+            <p>O Outback australiano é uma vasta região árida e remota que cobre grande parte do interior do país.
+                Conhecido por suas paisagens impressionantes, como desertos, formações rochosas e planícies infinitas, é
+                lar de rica biodiversidade e tradições aborígenes. O Outback simboliza a essência selvagem e intocada da
+                Austrália.
+            </p>
+            <img src="../img/PT3.jpg" alt="">
+        </div>
+        <div class="buttom">
+            <a href="./Cultura.html">Voltar</a>
+            <a href="../index.html">Continuar</a>
+        </div>
+    </div>
 </body>
+
 </html>
